# learning_generative_ai

./: .gitignore
00_chatgbt/: README.md
00_chatgbt/00_assistants/00_Knowledge_retrievel/: .gitignore  README.md  env.py  example.py  functions.py  main.py  streamlit_app.py
00_chatgbt/00_assistants/01_function_calling/: .gitignore  README.md  assistant_function_calling.ipynb  env.py  functions.py  main.py  requirements.txt  streamlit_app.py
00_chatgbt/00_assistants/02_code_interpreter/: README.md  functions.py  main.py
00_gbts/00_assistants/00_Knowledge_retrievel/: knowledge.docx
00_gbts/00_assistants/00_learning_openai/01_function_calling/01_uv_func_calling/: pyproject.toml
00_gbts/00_assistants/00_learning_openai/01_function_calling/01_uv_func_calling/src/uv_func_calling/: __init__.py  main.py  route.py
00_gbts/00_assistants/00_learning_openai/01_function_calling/01_uv_func_calling/src/uv_func_calling/openai/: model.py  model_tools.py
00_gbts/00_assistants/00_learning_openai/01_function_calling/01_uv_func_calling/src/uv_func_calling/utils/: route.py
00_gbts/00_assistants/02_code_interpreter/: streamlit_app.py
01_microservices_all_in_one_platform/00_python_poetry/00_poetry_projects/: .gitignore
01_microservices_all_in_one_platform/01_docker/00_dev_container/: Dockerfile  compose.yaml  main.py  pyproject.toml
01_microservices_all_in_one_platform/01_docker/01_compose_db/: README.md  compose.yaml
01_microservices_all_in_one_platform/01_docker/02_containerization/: Dockerfile.prod  pyproject.toml
(+155 files in other folders)
